--- a/translations/kangyur/translations/090-009_toh565-the_king_of_ritual_manuals_from_the_tantra_of_maya_maricis_arising.xml
+++ b/translations/kangyur/translations/090-009_toh565-the_king_of_ritual_manuals_from_the_tantra_of_maya_maricis_arising.xml
@@ -21,7 +21,7 @@
         <editor role="finalReviewer" xml:id="UT22084-090-009-378">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -47,7 +47,7 @@
           logic.</note>
         <date>2024-02-05</date>
       </publicationStmt>
-      <sourceDesc>
+      <tei:sourceDesc xmlns:tei="http://www.tei-c.org/ns/1.0">
         <bibl key="toh565" type="text">
           <ref>Toh 565</ref>
           <biblScope>Degé Kangyur, vol. 90 (rgyud ’bum, pha), folios 158.b–165.b.</biblScope>
@@ -57,7 +57,7 @@
           <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
           <idno source-id="O1JC114941JC12298" work="W22084"/>
         </bibl>
-      </sourceDesc>
+      </tei:sourceDesc>
       <notesStmt/>
       <revisionDesc>
         <change who="#line-tofte" when="2020-03-24T11:39:07.308Z" type="text-version" status="0.0.1" xml:id="UT22084-090-009-7">
@@ -156,6 +156,9 @@
                 <change who="#sameer" when="2024-02-05T13:38:00.335Z" type="text-version" status="1.0.0" xml:id="UT22084-090-009-382">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#andre" when="2024-02-22T17:00:08.181Z" type="text-version" status="1.0.1" xml:id="UT22084-090-009-383">
+                    <desc>Glossary integration revised, activated in CG</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -164,25 +167,25 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
     <front>
-      <div type="summary">
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary">
         <head type="summary" tid="1">Summary</head>
         <milestone unit="chunk" xml:id="UT22084-090-009-48"/>
         <p tid="2">
                     <title xml:lang="en">The King of Ritual Manuals from the Tantra of Māyā Mārīcī’s Arising</title> contains instructions for the
           visualization and ritual propitiation of the goddess Mārīcī. The text covers rites for protecting oneself from perilous situations, rites
           for increasing wealth and intelligence, elaborate battlefield magic rites, and rites for protecting livestock from predators.</p>
-      </div>
-      <div type="acknowledgment">
+      </tei:div>
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment">
         <head type="acknowledgment" tid="3">Acknowledgements</head>
         <milestone unit="chunk" xml:id="UT22084-090-009-49"/>
         <p tid="4">This text was translated by the Dharmachakra Translation Committee under the supervision of Chokyi Nyima Rinpoche. The text was
           translated, checked against the Sanskrit and Tibetan, and edited by Adam C. Krug.</p>
         <milestone unit="chunk" xml:id="UT22084-090-009-50"/>
         <p tid="5">The translation was completed under the patronage and supervision of 84000: Translating the Words of the Buddha.</p>
-      </div>
-      <div type="introduction">
+      </tei:div>
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction">
         <head type="introduction" tid="6">Introduction</head>
-        <div type="section" xml:id="UT22084-090-009-introduction-1">
+        <tei:div type="section" xml:id="UT22084-090-009-introduction-1">
           <milestone unit="chunk" xml:id="UT22084-090-009-51"/>
           <p tid="7">The opening line of <title xml:lang="en">The King of Ritual Manuals from the Tantra of Māyā Mārīcī’s Arising</title>
                         <note place="end" xml:id="UT22084-090-009-365">The Sanskrit title of this work on the title page of this translation reflects the emended
@@ -276,19 +279,17 @@
             IASWR microfilm collection under the title <title xml:lang="Sa-Ltn">Mārīcī­kalpa­tantra</title> (MBB II 112). All instances in which the
             English translation deviates from the reading in the Degé Kangyur in favor of a reading in the Sanskrit witness or another Tibetan witness
             are noted in the translation.</p>
-        </div>
-      </div>
+        </tei:div>
+      </tei:div>
     </front>
     <body>
-      <div type="translation">
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation">
         <head type="translation"> The Translation </head>
         <head type="titleMain" tid="15">The King of Ritual Manuals from the Tantra of Māyā Mārīcī’s Arising</head>
-        <div type="section" xml:id="UT22084-090-009-section-1">
+        <tei:div type="section" xml:id="UT22084-090-009-section-1">
           <milestone unit="chunk" xml:id="UT22084-090-009-68"/>
           <p tid="16">
-                        <ref cRef="F.158.b" type="folio" xml:id="UT22084-090-009-350"/>
-          </p>
-          <p tid="17">Homage to the Three Jewels. </p>
+                        <ref cRef="F.158.b" type="folio" xml:id="UT22084-090-009-350"/> Homage to the Three Jewels. </p>
           <lb/>
           <milestone unit="chunk" xml:id="UT22084-090-009-70"/>
           <p tid="18">This is the ritual manual of <title xml:lang="en">The Dhāraṇī of the Goddess Mārīcī</title> that was received by Vairocana’s
@@ -995,11 +996,11 @@
               this matter may not be adequately settled without access to the tantra that is allegedly the source text for this ritual
             manual.</note>
                     </trailer>
-        </div>
-      </div>
+        </tei:div>
+      </tei:div>
     </body>
     <back>
-      <div type="notes">
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes">
         <head type="notes" tid="129">Notes</head>
         <list type="abbreviations">
           <head tid="130">Abbreviations</head>
@@ -1031,10 +1032,10 @@
               MBB-1973-112 [MBB II 112]).</expan>
                     </item>
         </list>
-      </div>
-      <div type="listBibl">
+      </tei:div>
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl">
         <head type="listBibl" tid="131">Bibliography</head>
-        <div type="section" xml:id="UT22084-090-009-listBibl-1">
+        <tei:div type="section" xml:id="UT22084-090-009-listBibl-1">
           <head type="section" tid="132">Tibetan Sources</head>
           <bibl xml:id="UT22084-090-009-257">
                         <title xml:lang="Bo-Ltn">sgyu ma’i ’od zer can ’byung ba’i rgyud las phyung ba’i rtog pa’i rgyal
@@ -1055,8 +1056,8 @@
           <bibl xml:id="UT22084-090-009-261">
                         <title xml:lang="Bo-Ltn">’od zer can zhes bya ba’i gzungs</title> (<title xml:lang="Sa-Ltn">Mārīcī­nāma­dhāraṇī</title>) [<title xml:lang="en">The Mārīcī Dhāraṇī</title>]. <ref target="https://read.84000.co/translation/toh564.html">Toh 564</ref>, Degé Kangyur vol. 90 (rgyud ’bum, pha), folios 157.a–158.b; <ref target="https://read.84000.co/translation/toh988.html">Toh 988</ref>, Degé Kangyur vol. 101 (gzungs ’dus, waM), folios 142.a–143.a.
             English translation in Dharmachakra Translation Committee 2024a.</bibl>
-        </div>
-        <div type="section" xml:id="UT22084-090-009-listBibl-2">
+        </tei:div>
+        <tei:div type="section" xml:id="UT22084-090-009-listBibl-2">
           <head type="section" tid="133">Sanskrit Sources</head>
           <bibl xml:id="UT22084-090-009-262">Abhayākaragupta. <title xml:lang="Sa-Ltn">Niṣpanna­yogāvalī</title>. Edited and translated by Lokesh
             Chandra and Nirmala Sharma. New Delhi: International Academy of Indian Culture and Aditya Prakashan, 2015.</bibl>
@@ -1066,8 +1067,8 @@
           <bibl xml:id="UT22084-090-009-264">
                         <title xml:lang="Sa-Ltn">Mārīcī­kalpa­tantra</title>. Institute for the Advanced Study of World Religions
             (IASWR) no. MBB-1973-112 (MBB II 112).</bibl>
-        </div>
-        <div type="section" xml:id="UT22084-090-009-listBibl-3">
+        </tei:div>
+        <tei:div type="section" xml:id="UT22084-090-009-listBibl-3">
           <head type="section" tid="134">Reference Works</head>
           <bibl xml:id="UT22084-090-009-265">Bhattacharyya, Benoytosh, ed. <title xml:lang="Sa-Ltn">Sādhanamālā</title>. Vol. 1. Baroda: Oriental
             Institute, 1968.</bibl>
@@ -1098,8 +1099,8 @@
               Catalogue and Bibliography</title>. Vol. 2. Oakland, CA: Dharma Press, 1982.</bibl>
           <bibl xml:id="UT22084-090-009-276">Yoshimuri, Shyuki. <title xml:lang="Bo-Ltn">bka’ bstan dkar chag ldan dkar ma/ dbu can bris ma/</title>.
             Kyoto: Ryukoku University, 1950.</bibl>
-        </div>
-        <div type="section" xml:id="UT22084-090-009-listBibl-4">
+        </tei:div>
+        <tei:div type="section" xml:id="UT22084-090-009-listBibl-4">
           <head type="section" tid="135">Secondary Sources</head>
           <bibl xml:id="UT22084-090-009-277">Bhattacharyya, Dipakchandra. “An Interesting Image of the Godess [<distinct>sic</distinct>] Marici.”
               <title xml:lang="en">Proceedings of the Indian History Congress</title> 26, part 1 (1964): 91–94.</bibl>
@@ -1116,9 +1117,9 @@
               of Her Cult on the Japanese Warrior</title>. Boston: Global Oriental, 2014.</bibl>
           <bibl xml:id="UT22084-090-009-282">Hummel, Siegbert. “Notizen zur Ikonographie der Mārīcī.” <title xml:lang="la">Monumenta Serica</title> 37
             (1986–87): 227–32.</bibl>
-        </div>
-      </div>
-      <div type="glossary" status="excluded">
+        </tei:div>
+      </tei:div>
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary">
         <list type="glossary">
           <!--<item><gloss type="term" xml:id="UT22084-090-009-284">
               <term type="translationMain">dhāraṇī</term>
@@ -1437,17 +1438,12 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-090-009-314">
-              <term type="translationMain">league</term>
-              <term xml:lang="Bo-Ltn" n="1">dpag tshad </term>
-              <term xml:lang="bo" n="1">དཔག་ཚད།</term>
-              <term xml:lang="Sa-Ltn" type="attestedSource">yojana</term>
-              <note type="definition">
-                <p>A measure of distance sometimes translated as “league,” but with varying definitions. The Sanskrit term denotes the distance yoked
-                  oxen can travel in a day or before needing to be unyoked. From different canonical sources the distance represented varies between
-                  four and ten miles.</p>
-              </note>
-            </gloss>
+                        <gloss xml:id="UT22084-090-009-314" type="term" mode="match">
+                            <term type="translationMain">league</term>
+                            <term xml:lang="Sa-Ltn" type="attestedSource">yojana</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dpag tshad</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">དཔག་ཚད།</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-090-009-315">
@@ -1828,7 +1824,7 @@
             </gloss>
                     </item>
         </list>
-      </div>
+      </tei:div>
     </back>
   </text>
 </TEI>
