--- a/translations/kangyur/translations/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/translations/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -38,7 +38,7 @@
                                         Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -183,6 +183,9 @@
                 </change>
                 <change who="#konchog" when="2024-02-23T01:51:18.658Z" type="text-version" status="1.0.1" xml:id="UT22084-059-013-188">
                     <desc>A couple of fixes in the main translation, and updated the notes to reflect our current citation style for 84000 publications.</desc>
+                </change>
+                <change who="#andre" when="2024-02-23T16:18:13.336Z" type="text-version" status="1.0.2" xml:id="UT22084-059-013-189">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -716,7 +719,7 @@
                                                 Wisdom Publications, 2021.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-059-013-109">
@@ -777,17 +780,15 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-059-013-114">
-                                                  <term type="translationMain">the six sense
-                                                  sources</term>
-                                                  <term status="verified" xml:lang="Bo-Ltn" n="1">skye mched drug </term>
-                                                  <term xml:lang="bo" n="1">སྐྱེ་མཆེད་དྲུག</term>
-                                                  <term status="verified" xml:lang="Sa-Ltn">ṣaḍāyatana</term>
-                                                  <note type="definition">
-                                <p>The fifth link of the
-                                                  twelve links of dependent origination.</p>
+                        <gloss xml:id="UT22084-059-013-114" type="term" mode="match">
+                            <term type="translationMain">six sense sources</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">ṣaḍāyatana</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">skye mched drug</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྐྱེ་མཆེད་དྲུག</term>
+                            <note type="definition">
+                                <p>The fifth link of the twelve links of dependent origination.</p>
                             </note>
-                                                </gloss>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-059-013-115">
