--- a/translations/kangyur/placeholders/096-055_toh806-tantra_of_the_procedures_common_to_all_mandalas.xml
+++ b/translations/kangyur/placeholders/096-055_toh806-tantra_of_the_procedures_common_to_all_mandalas.xml
@@ -4,13 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dkyil 'khor spyi'i cho ga'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvamaṇḍala­sāmānyavidhīnāṃ guhyatantram</title>
                 <title type="mainTitle" xml:lang="en">Tantra of the Procedures Common to All Maṇḍalas</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sarvamaṇḍala­sāmānyavidhīnāṃ guhyatantram</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dkyil 'khor spyi'i cho ga'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dkyil 'khor thams cad kyi spyi'i cho ga gsang ba'i rgyud/</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.3 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-096-055"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,6 +39,21 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-03T13:35:34.968Z" type="text-version" status="0.0.1" xml:id="UT22084-096-055-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:36:03.877Z" type="text-version" status="0.0.1" xml:id="UT22084-096-055-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-12-07T15:02:12.257Z" type="text-version" status="0.0.1" xml:id="UT22084-096-055-7">
+                    <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T12:10:56.002Z" type="text-version" status="0.0.2" xml:id="UT22084-096-055-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T12:11:12.783Z" type="translation-status" status="" xml:id="UT22084-096-055-9">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T12:11:12.783Z" type="text-version" status="0.0.3" xml:id="UT22084-096-055-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
