--- a/translations/kangyur/placeholders/072-018_toh318-the_dharma_discourse_on_the_vast_meaning.xml
+++ b/translations/kangyur/placeholders/072-018_toh318-the_dharma_discourse_on_the_vast_meaning.xml
@@ -5,23 +5,24 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dharma Discourse on the Vast Meaning</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">arthavistaradharmaparyāya</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Arthavistaradharmaparyāya</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">don rgyas pa'i chos kyi rnam grangs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryārthavistaranāmadharmaparyāya</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryārthavistaranāmadharmaparyāya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don rgyas pa zhes bya ba'i chos kyi rnam grangs</title>
-                <author role="translatorMain" ref="eft:team-74"/>
-                <author role="translatorEng" ref="eft:person-111">Ina Bieler</author>
-                <consultant role="projectManager" ref="eft:person-111">Ina Bieler</consultant>
-                <consultant role="dharmaMaster" ref="eft:person-102">Garchen Rinpoche</consultant>
-                <editor role="reviser" ref="eft:person-386">Ilana Cohen</editor>
-                <editor role="proofreader" ref="eft:person-387">Amber Moore</editor>
-                <consultant role="advisor" ref="eft:person-388">C. Rocco Cheng</consultant>
+                <author role="translatorMain" xml:id="UT22084-072-018-1"/>
+                <author role="translatorEng" xml:id="UT22084-072-018-2">Ina Bieler</author>
+                <consultant role="projectManager" xml:id="UT22084-072-018-3">Ina Bieler</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-072-018-4">Garchen Rinpoche</consultant>
+                <editor role="reviser" xml:id="UT22084-072-018-5">Ilana Cohen</editor>
+                <editor role="proofreader" xml:id="UT22084-072-018-6">Amber Moore</editor>
+                <consultant role="advisor" xml:id="UT22084-072-018-7">C. Rocco Cheng</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-072-018"/>
                 <date/>
             </publicationStmt>
@@ -36,22 +37,45 @@
                     <idno source-id="O1JC114941JC11993" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-08T12:56:56.251Z" user="admin">08/12/2021 12:56:56</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-01-20T09:32:54.193Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-20T09:32:54.193Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-20T09:33:27.267Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-20T09:33:40.783Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-12-08T12:31:18.67Z" user="line-tofte">2.h</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-12-08T12:31:18.67Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-12-08T12:34:39.567Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-08T12:39:06.182Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-12-08T12:56:50.175Z" user="line-tofte">Auto (update-contributors)</note>
-</notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-01-20T09:32:54.193Z" type="translation-status" status="3" xml:id="UT22084-072-018-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-20T09:32:54.193Z" type="text-version" status="0.0.1" xml:id="UT22084-072-018-9">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-20T09:33:27.267Z" type="text-version" status="0.0.2" xml:id="UT22084-072-018-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-20T09:33:40.783Z" type="text-version" status="0.0.3" xml:id="UT22084-072-018-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-12-08T12:31:18.67Z" type="translation-status" status="2.h" xml:id="UT22084-072-018-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-12-08T12:31:18.67Z" type="text-version" status="0.0.4" xml:id="UT22084-072-018-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-12-08T12:34:39.567Z" type="text-version" status="0.0.5" xml:id="UT22084-072-018-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-12-08T12:39:06.182Z" type="text-version" status="0.0.6" xml:id="UT22084-072-018-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-12-08T12:56:50.175Z" type="text-version" status="0.0.7" xml:id="UT22084-072-018-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-072-018-17">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T15:09:51.14Z" type="translation-status" status="2.g" xml:id="UT22084-072-018-18">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T15:09:51.14Z" type="text-version" status="0.0.9" xml:id="UT22084-072-018-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
