--- a/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
+++ b/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">me tog brtsegs pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryapuṣpakūṭanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa me tog brtsegs pa zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-088-010-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-010-1">Buddhapīṭha Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-088-010-2">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-088-010-3">Péter-Dániel Szántó</author>
                 <consultant role="projectManager" xml:id="UT22084-088-010-4">Péter-Dániel Szántó</consultant>
+                <editor role="projectEditor" xml:id="UT22084-088-010-26">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-010"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +95,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-16T12:45:59.732Z" type="text-version" status="0.0.11" xml:id="UT22084-088-010-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T12:46:36.69Z" type="text-version" status="0.0.12" xml:id="UT22084-088-010-27">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T15:43:09.02Z" type="translation-status" status="2.f" xml:id="UT22084-088-010-28">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T15:43:09.02Z" type="text-version" status="0.0.13" xml:id="UT22084-088-010-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
