--- a/translations/kangyur/translations/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/translations/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -34,7 +34,7 @@
                 <editor role="projectEditor" xml:id="UT22084-055-002-79">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.28 <date>2024</date>
+                <edition>v 0.0.29 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -188,6 +188,9 @@
                 <change who="#john" when="2024-02-26T20:11:04.877Z" type="text-version" status="0.0.28" xml:id="UT22084-055-002-248">
                     <desc>Edits to note 1 and some other minor changes.</desc>
                 </change>
+                <change who="#john" when="2024-02-26T20:13:59.635Z" type="text-version" status="0.0.29" xml:id="UT22084-055-002-249">
+                    <desc>User set version to 0.0.29</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -249,8 +252,8 @@
                                 nyid</foreign>) is absent and there is no dative particle (or
                                 <foreign xml:lang="Bo-Ltn" type="term">la don</foreign>) after the
                             word “all” (<foreign xml:lang="Bo-Ltn" type="term">thams cad</foreign>),
-                            which would allow a different interpretation of “all” as referring to “all things” 
-                            rather than “all" the people present; that version of the  title would translate as <title xml:lang="en">The
+                            which allows a different interpretation of “all” as referring to “all things” 
+                            rather than “all” the people present; that version of the  title would translate as <title xml:lang="en">The
                                 Sūtra on All Things Appearing Differently While Not Departing from
                                 the Essence of the True Nature of Things</title> (<title xml:lang="Bo-Ltn">chos nyid rang gi ngo bo nyid las mi g.yo bar tha
                                 dad par thams cad snang ba’i mdo</title>). This colophon title
@@ -263,7 +266,7 @@
                                 (<title xml:lang="Bo-Ltn">’phags pa chos nyid rang gi ngo bo nyid las mi
                                 g.yo bar tha dad par thams cad snang ba zhes bya theg pa chen po’i
                                 mdo</title>). Another problem is posed by the Sanskrit title 
-                                including the word <foreign xml:lang="Sa-Ltn">āloka</foreign> (“light" 
+                                including the word <foreign xml:lang="Sa-Ltn">āloka</foreign> (“light” 
                                 or “illumination”) which, despite the fact that it might have been a plausible back-translation into Sanskrit from
                                 the Tibetan <foreign xml:lang="Bo-Ltn">snang ba</foreign> had the content
                                 of the text been different, has a semantic range somewhat
