--- a/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
@@ -17,14 +17,15 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-058-005-5">Chokyi Nyima Rinpoche</consultant>
                 <editor role="reviser" xml:id="UT22084-058-005-6">Benjamin Collet-Cassart</editor>
                 <editor role="projectEditor" xml:id="UT22084-058-005-28">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-058-005-39">Laura Goetz</editor>
                 <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-058-005"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +83,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-22T14:54:21.875Z" type="text-version" status="0.0.10" xml:id="UT22084-058-005-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-22T14:55:04.46Z" type="text-version" status="0.0.11" xml:id="UT22084-058-005-40">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:31:24.642Z" type="translation-status" status="2.d" xml:id="UT22084-058-005-41">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:31:24.642Z" type="text-version" status="0.0.12" xml:id="UT22084-058-005-42">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
