--- a/translations/kangyur/placeholders/096-041_toh792,1034-the_incantation_for_a_pleasant_voice.xml
+++ b/translations/kangyur/placeholders/096-041_toh792,1034-the_incantation_for_a_pleasant_voice.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-041-6">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-041"/>
             </publicationStmt>
             <sourceDesc>
@@ -58,6 +58,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-12-07T10:59:30.61Z" type="text-version" status="0.0.1" xml:id="UT22084-096-041-8">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:41:14.276Z" type="translation-status" status="2.h" xml:id="UT22084-096-041-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:41:14.276Z" type="text-version" status="0.0.2" xml:id="UT22084-096-041-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
