--- a/translations/kangyur/translations/063-010_toh229-discussions_of_thus-gone_ones.xml
+++ b/translations/kangyur/translations/063-010_toh229-discussions_of_thus-gone_ones.xml
@@ -32,7 +32,7 @@
                 <sponsor xml:id="UT22084-063-010-735">马珂，王晓娟</sponsor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.7 <date>2023</date>
+                <edition>v 1.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -197,6 +197,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-17T09:42:18.038Z" type="text-version" status="1.0.7" xml:id="UT22084-063-010-788">
                     <desc>updated typo.</desc>
+                </change>
+                <change who="#celso" when="2024-02-27T15:53:51.931Z" type="text-version" status="1.0.8" xml:id="UT22084-063-010-795">
+                    <desc>Corrected errors in the Kangyur sigla</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -550,7 +553,7 @@
                                                 basis that I fully awakened to unexcelled and
                                                 perfect buddhahood.’ Mañjuśrī, the thus-gone
                                                 Akṣobhya then asked me, ‘On what basis did<note place="end" xml:id="UT22084-063-010-32"> This
-                                                  reading is based on K<hi rend="subscript">Y</hi>,
+                                                  reading is based on Y<!--KY-->,
                                                   J, K, and C, where <foreign xml:lang="Bo-Ltn" type="term">bdag</foreign> is omitted.</note> the
                                                 greatest of the Śākya kings, Śākyamuni, fully awaken
                                                 to <ref cRef="F.229.a" type="folio" xml:id="UT22084-063-010-652"/> unexcelled and
@@ -863,8 +866,8 @@
                                                   they<note place="end" xml:id="UT22084-063-010-67">
                                                   Reading with the omission of <foreign xml:lang="Bo-Ltn" type="term">na</foreign> (in
                                                   <foreign xml:lang="Bo-Ltn" type="quote">de
-                                                  na</foreign>) as in K<hi rend="subscript">Y</hi>,
-                                                  L, K<hi rend="subscript">Q</hi>, N, C, and
+                                                  na</foreign>) as in Y<!--KY-->,
+                                                  J, K, N, C, and
                                                   H.</note> be present? How could they appear in
                                                 actuality? Mañjuśrī, it is on such a basis that I
                                                 fully awakened to unexcelled and perfect buddhahood.
@@ -1852,7 +1855,7 @@
                                                 insubstantial thing. Blessed One, the defeated king
                                                 and the words of the king<note place="end" xml:id="UT22084-063-010-180"> Reading <foreign xml:lang="Bo-Ltn" type="quote">’</foreign>
                             <foreign xml:lang="Bo-Ltn" type="term">dis</foreign> from
-                                                  K<hi rend="subscript">Y</hi>, J, K, N, and C in
+                                                  Y<!--KY-->, J, K, N, and C in
                                                   place of <foreign xml:lang="Bo-Ltn" type="term">di</foreign>.</note> are a delusion of childish, ordinary beings.” <ref cRef="F.244.b" type="folio" xml:id="UT22084-063-010-683"/>
                                         </p>
                                         <p tid="175">The Blessed One said, “Great king, in that same
@@ -1943,7 +1946,7 @@
                                         <milestone unit="chunk" xml:id="UT22084-063-010-187"/>
                                         <p tid="181">Śakra, king of the gods, then said to the gods
                                                 of the Heaven of the Thirty-Three, “Come<note place="end" xml:id="UT22084-063-010-188"> Reading
-                                                  <foreign xml:lang="Bo-Ltn" type="term">shog</foreign> from K<hi rend="subscript">Q</hi>,
+                                                  <foreign xml:lang="Bo-Ltn" type="term">shog</foreign> from K,
                                                   C, and S in place of <foreign xml:lang="Bo-Ltn" type="term">sheg</foreign>.</note> here, gods. In
                                                 order to worship this Dharma teaching, one must
                                                 scatter, sprinkle, and toss divine flowers, incense,
@@ -2608,7 +2611,7 @@
                                                 neither existent nor nonexistent. Mañjuśrī, in this
                                                 way all phenomena are awakening, yet all phenomena
                                                 are also not<note place="end" xml:id="UT22084-063-010-264"> Omitting <foreign xml:lang="Bo-Ltn" type="term">ma</foreign> based
-                                                  on K<hi rend="subscript">Y</hi>, J, K, N, C, and
+                                                  on Y<!--KY-->, J, K, N, C, and
                                                         H.</note> awakening. <ref cRef="B3" type="bampo"/>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-063-010-266"/>
@@ -2718,11 +2721,11 @@
                                         <p tid="264">The householders said to the Blessed One,
                                                 “Blessed One, it is amazing that the Thus-Gone One
                                                 is able to make<note place="end" xml:id="UT22084-063-010-280"> Reading <foreign xml:lang="Bo-Ltn" type="term">btsal ba</foreign>
-                                                  from K<hi rend="subscript">Y</hi>, L, B, N, C, Z,
+                                                  from Y<!--KY-->, J, K, N, C, H,
                                                   and S in place of <foreign xml:lang="Bo-Ltn" type="term">’tshal ba</foreign>.</note> such a
                                                 subtle and far-reaching analogy as this!”</p>
                                         <p tid="265">The Blessed One said, “Householders, one should
-                                                  know<note place="end" xml:id="UT22084-063-010-282"> Reading <foreign xml:lang="Bo-Ltn" type="term">rig par</foreign> from K<hi rend="subscript">Y</hi>, L, B, N, and Z in place of <foreign xml:lang="Bo-Ltn" type="term">blta
+                                                  know<note place="end" xml:id="UT22084-063-010-282"> Reading <foreign xml:lang="Bo-Ltn" type="term">rig par</foreign> from Y<!--KY-->, J, K, N, and H in place of <foreign xml:lang="Bo-Ltn" type="term">blta
                                                   bar</foreign>.</note> the wisdom of the thus-gone,
                                                 worthy, perfect buddhas to be just like that. You
                                                 should ardently pursue it just as you have heard it.
@@ -3340,7 +3343,7 @@
                                                 <l>Protector, Well-Gone One, what is the cause for
                                                   this smile?</l>
                                                 <l>Victor,<note place="end" xml:id="UT22084-063-010-379"> Reading <foreign xml:lang="Bo-Ltn" type="term">rgyal ba</foreign>
-                                                  from K<hi rend="subscript">Y</hi>, K, and S in
+                                                  from Y<!--KY-->, K, and S in
                                                   place of <foreign xml:lang="Bo-Ltn" type="term">rgyal ba’i</foreign>.</note> what is the reason
                                                   that you smile in the world?</l>
                                         </lg>
@@ -3488,7 +3491,7 @@
                                                 “Ānanda, when this vast Dharma teaching given by the
                                                 Thus-Gone One was taught and explained, those eight
                                                 householders attained<note place="end" xml:id="UT22084-063-010-398"> Reading <foreign xml:lang="Bo-Ltn" type="term">thob</foreign> from
-                                                  K<hi rend="subscript">Y</hi>, J, K, N, C, H, and S
+                                                  Y<!--KY-->, J, K, N, C, H, and S
                                                   in place of <foreign xml:lang="Bo-Ltn" type="term">thos</foreign>.</note> the absorption called
                                                   <distinct>complete illumination</distinct>, and
                                                 they will proclaim it.”</p>
@@ -4055,6 +4058,34 @@
                 <back>
                         <div type="notes">
                                 <head type="notes" tid="455">Notes</head>
+                                <list type="abbreviations">
+                                        <head type="abbreviations" tid="475">Abbreviations</head>
+                                        <item xml:id="UT22084-063-010-789">
+                        <abbr>C</abbr>
+                                                <expan>Choné</expan>
+                    </item>
+                                        <item xml:id="UT22084-063-010-790">
+                        <abbr>D</abbr>
+                                                <expan>Degé</expan>
+                    </item>
+                                        <item xml:id="UT22084-063-010-791">
+                        <abbr>H</abbr>
+                                                <expan>Lhasa (Zhol)</expan>
+                    </item>
+                                        <item xml:id="UT22084-063-010-792">
+                        <abbr>K<!--KQ--></abbr>
+                        <expan>Peking <!--1737-->1684/1692 (<!--Qianlong-->Kangxi)</expan>
+                    </item>
+                                        <item xml:id="UT22084-063-010-793">
+                        <abbr>N</abbr>
+                                                <expan>Narthang</expan>
+                    </item>
+                                        <item xml:id="UT22084-063-010-794">
+                        <abbr>S</abbr>
+                        <expan>Stok</expan>
+                    </item>
+                                        
+                                </list>
                         </div>
                         <div type="listBibl">
                                 <head type="listBibl" tid="457">Bibliography</head>
@@ -4300,7 +4331,7 @@
                             <term xml:lang="bo" type="attestedSource" n="2" status="verified">དཔུང་གི་ཚོགས་ཡན་ལག་བཞི་པ།</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="3" status="verified">dpung gi tshogs yan lag bzhi po</term>
                             <term xml:lang="bo" type="attestedSource" n="3" status="verified">དཔུང་གི་ཚོགས་ཡན་ལག་བཞི་པོ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The fourfold division of
                                                   the ancient Indian army: elephants, horses,
                                                   chariots, and foot soldiers.</p>
@@ -4499,7 +4530,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">akṣobhya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mi ’khrugs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མི་འཁྲུགས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Literally “The Immovable
                                                   One,” Akṣobhya is a buddha who dwells in the
                                                   eastern buddha field Abhirati.</p>
@@ -5233,7 +5264,7 @@
                             <term type="translationMain">Paltsek</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dpal brtsegs</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དཔལ་བརྩེགས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Also known as Kawa Paltsek
                                                   (<foreign xml:lang="Bo-Ltn">ska ba</foreign> or
                                                   <foreign xml:lang="Bo-Ltn">ka ba dpal
@@ -5727,7 +5758,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śākya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">shAkya</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤཱཀྱ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the clan into
                                                   which the Buddha Śākyamuni was born.</p>
                             </note>
@@ -5891,7 +5922,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཛམ་བུའི་གླིང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>According to Buddhist
                                                   cosmology, this is the southern continent of our
                                                   world system and the one on which we live. It may
